# openclaw-desktop

./: .gitignore  README.md  agent_help.txt  agent_help_utf8.txt  agents_add_help.txt  agents_add_help_utf8.txt  agents_help.txt  agents_help_utf8.txt  browser_help.txt  browser_help_utf8.txt  cron_add_help.txt  cron_add_help_utf8.txt  cron_help.txt  cron_help_utf8.txt  debug_output_final.txt  debug_output_v13_clean.txt  debug_output_v13_forcebind.txt  help.txt  openclaw_help.txt  openclaw_help_utf8.txt  package-lock.json  package.json  requirements.txt  test-browser.cjs
scripts/: browser-automator.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  scheduler.rs
